--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,33 @@ h1, h2, h3, h4 {
 	text-shadow:none;
 }
 
+.optionList{
+	clear: both;
+	column-count: 4;
+	column-gap: 10px;
+	-moz-column-width: 200px;
+	-webkit-column-width: 200px;
+	margin:0;
+	}
+
+.optionList li{
+	position:relative;
+	}
+	
+	
+.optionList i {
+	position:absolute;
+	}
+	
+.optionList input {
+	position:absolute;
+	visibility:hidden;
+	}
+	
+.optionList label {
+	padding-left:30px;
+	}
+
 .form-inline-component {
     display: inline-block;
     margin-bottom: 0;
@@ -103,6 +130,24 @@ h1, h2, h3, h4 {
 .modal-body ul{
 	list-style: disc outside none;
   margin-left: 20px;
+}
+
+.gradient, .accordion-heading, .collapse-heading {
+  text-shadow: 0 -1px 0 rgba(255, 255, 255, 0.25);
+  text-decoration: none !important;
+  background-color: #f5f5f5;
+  background-image: -moz-linear-gradient(top, #f5f5f5, #e6e6e6);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f5f5f5), to(#e6e6e6));
+  background-image: -webkit-linear-gradient(top, #f5f5f5, #e6e6e6);
+  background-image: -o-linear-gradient(top, #f5f5f5, #e6e6e6);
+  background-image: linear-gradient(to bottom, #f5f5f5, #e6e6e6);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe6e6e6', GradientType=0);
+}
+
+.collapse-heading {
+	padding: 5px 15px;
+	border-radius: 5px;
 }
 
 .ricardopay-info-box {
@@ -348,7 +393,8 @@ h1, h2, h3, h4 {
 	padding-right: 15px;
 } 
 
-/* -?- */
+/* +++++++++++++++++++++++++ Step2 (Core) +++++++++++++++++++++++++ */
+
 #savedForLater {
     margin-bottom: 30px;
 }
@@ -492,6 +538,27 @@ h1, h2, h3, h4 {
     margin-top: 1px;
     border-radius: 50% 50% 50% 50%;
 }
+
+/* +++++++++++++++++++++++++ Step2 (Cars) +++++++++++++++++++++++++ */
+
+#userSelectionDetail dl{
+	clear: both;
+	column-count: 3;
+	column-gap: 10px;
+	-moz-column-width: 290px;
+	-webkit-column-width: 290px;
+	margin:0;
+	}
+	
+#userSelectionDetail dt{
+	width:55%;
+	float:left;
+	}
+
+	
+#userSelectionDetail dl{
+	margin:0;
+	}
 
 /* +++++++++++++++++++++++++ Step3 +++++++++++++++++++++++++ */
 
