--- a/css/main.css
+++ b/css/main.css
@@ -1372,8 +1372,15 @@ margin-left: -13px;
 .option label[for='silver']{
     background-color: #f29106 !important;
     width: 400px;
-    margin-left: -30px;
+    margin-left: -40px;
     box-shadow: 0 0 8px;
-
 }
+
+label[for='silver'] .value{
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    width:200px !important;
+}
+
 
