--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,7 @@ h1, h2, h3, h4 {
 	
 .optionList i {
 	position:absolute;
+	cursor:pointer;
 	}
 	
 .optionList input {
@@ -160,6 +161,7 @@ h1, h2, h3, h4 {
 
 .accordion-inner {
 	background-color:#fff;
+	border-radius: 0 0 5px 5px;
 }
 
 .ricardopay-info-box {
@@ -337,6 +339,9 @@ h1, h2, h3, h4 {
 	height:110px;
 	padding-top:80px;
 	position:relative;
+}
+#carsCatSelector a.selected{
+	border-color:#a6b825;
 }
 #carsCatSelector img{ 
 	left: 50%;
