--- a/css/main.css
+++ b/css/main.css
@@ -613,11 +613,8 @@ h1, h2, h3, h4 {
 }
 
 #listingType label.btn i {
-    background-image: none;
     position: absolute;
-    border: 1px solid #757575;
-    border-radius: 4px;
-    right: 7px;
+    right: 0;
     top: 7px;
 }
 
@@ -677,30 +674,44 @@ input[type="radio"].toggle:checked + label {
     text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
     background-color: #eee;
 }
-#listingPaymentConditions .option-group.selected {
+#listingPaymentConditions .option-group.active {
     border-color: #bcd229;
 }
-#listingPaymentConditions button {
+
+#listingPaymentConditions .option-group>.span12 {
+	margin:0;
+}
+#listingPaymentConditions .btn {
     color: #757575;
     margin-bottom: 5px;
-    width: 100%;
+    /*width: 100%;*/
     position: relative;
 }
-#listingPaymentConditions button.active {
+#listingPaymentConditions .btn.selected {
     color: #fff;
     background-color: #bcd229;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
+		background-image:none;
 }
-#listingPaymentConditions button i {
-    background-image: none;
-    margin: 0 5px 0 0;
+#listingPaymentConditions .btn i {
+    /*background-image: none;
+    margin: 0 5px 0 0;*/
     position: absolute;
-    right: 5px;
+    right: 0px;
     top: 7px;
 }
-#listingPaymentConditions button.active i {
-    background-position: -288px 0;
-    background-image: url("https://pics.ricardostatic.ch/contents/ch/assets/images/ricardo_icons_white.png");
+#listingPaymentConditions .btn.selected i {
+    /*background-position: -288px 0;
+    background-image: url("https://pics.ricardostatic.ch/contents/ch/assets/images/ricardo_icons_white.png");*/
+}
+
+#listingPaymentConditions .likeDescription label {
+	    width: auto !important;
+}
+
+#listingPaymentConditions .likeDescription textarea {
+	/*margin:0 -13px;*/
+	width:171px;
 }
 
 /* Step 6 Fees*/
@@ -1099,7 +1110,7 @@ label {
 
 .stepIndicator li a div {
     float: left;
-    max-width: 85px;
+    max-width: 100px;
 }
 
 .stepIndicator li a div:first-child {
@@ -1127,7 +1138,7 @@ label {
    .stepIndicator li a div:last-child{
     position: absolute;
     margin-left: 60px;
-    margin-top: 5px;
+    margin-top: 7px;
     z-index: 500;
  }
   
@@ -1381,7 +1392,7 @@ span.charsLeft{
 }
 
 .option-group .btn{
-    width: 180px !important;
+    /*width: 180px !important;*/
     height: 130px; 
     text-align: left;
 
